--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>flap-a-raksu</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="dist/main.css">
+        <script src="dist/main.js" async defer></script>
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
+        <header>
+            <h1>flap-a-raksu</h1>
+            <h2>make sure raksu does not fall!!</h2>
+        </header>
+        <section class="game-area">
+                <div id="raksu"> 
+                    </div> 
+        </section>
+    
     </body>
 </html>
