initial styling done

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             <h2>make sure raksu does not fall!!</h2>
         </header>
         <section class="game-area">
-                <div id="raksu"> 
-                    </div> 
+            <div id="raksu"> </div> 
         </section>
-    
+        <div>
+            <button>Press me to flap</button> 
+        </div>
     </body>
 </html>
