some initial bits

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="raksu"> </div> 
         </section>
         <div>
-            <button>Press me to flap</button> 
+            <button (click)="fly()">Press me to flap</button> 
         </div>
     </body>
 </html>
